Add empty default value binding